app/client/views/observations/observations.css
.observations.bg {
	position: fixed;
	top: 0;
	width: 100%;
	height: 100%;
	background-image: url("/paper.png");
	z-index: -1;
}

div.add {
	width: 40px;
	height: 40px;
	position: fixed;
	top: 10px;
	right: 10px;
	z-index: 1;
}

div.add .text {
	font-size: 2em;
	font-weight: bold;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
}

div.obs {
	border-radius: 3px;
	background-color: white;
	box-shadow: 0 2px 5px black;
	display: inline-block;
	text-align: center;
}

div.obs:not(.add) {
	width: 20vw;
	padding: 3px;
}

div#action-btns {
	text-align: center;
}

#action-btns .obs {
	padding-top: 5px;
}

.note-compact {
	border-bottom: 1px solid black;
	padding: 10px 0;
}

.note-compact * {
	pointer-events: none;
}

.note-compact h1,p {
	margin: 0;
}

.note-compact h1:empty::after {
	content: 'Untitled';
}

.note-compact:last-child {
	border: none;
}

.note-expanded h1:empty::after {
	content: 'Untitled';
}

.note-expanded div.content:empty::after {
	content: "Write about something you've observed or attach an image"
}

.note-expanded h1:focus::after {
	color: gray;
}

.note-expanded div.content:focus::after {
	color: gray;
}

div br::after {
	content: 'doge';
}

#observations-msg {
	position: fixed;
	top: 20px;
	right: 20px;
	bottom: 20px;
	left: 20px;
	z-index: 2;
	background-color: white;
	box-shadow: 0 3px 10px black;
	border-radius: 10px;
	padding: 10px;
}

#observations-msg p {
	padding: 10px 0;
}

#observations-msg p:first-child {
	padding: 0;
}

#observations-msg .button {
	bottom: 10px;
	max-width: 50%;
}

#observations-msg .button.dontShow {
	right: 10px;
}

